chỉnh css product

--- a/src/Components/Product/Product.module.scss
+++ b/src/Components/Product/Product.module.scss
@@ -160,7 +160,7 @@
     margin: 0;
 }
 
-.list-products--item:hover .promote {
+.list_products__item:hover .promote {
     opacity: 0.9;
     visibility: visible;
 
