--- a/src/Pages/Detail/Detail.module.scss
+++ b/src/Pages/Detail/Detail.module.scss
@@ -1,11 +1,15 @@
-body {
-    max-width: 1200px;
-    margin: 0 auto;
-}
+// body {
+//     max-width: 1200px;
+//     margin: 0 auto;
+// }
 
 nav {
     overflow: hidden;
     font-size: 25px;
+}
+
+.name_detailProduct {
+    margin-left: 220px;
 }
 
 .nav_ul_detailProduct {
